data/all_generated_tests/raw_wast_tests/br_table_InvalidorInconsistentControlFlowGraph_2330.wast
;; 10. **Incorrect Immediate Encoding of Label Vector:**    Manipulate immediate encoding for the `br_table` label vector to include invalid or spurious label references. Ensure that the CFG recognizes and handles improper immediate parameters to avoid errant execution paths.

(assert_invalid
  (module
    (func $incorrect-immediate-encoding
      (block
        (i32.const 1)
        (br_table 0 999 1) ;; Invalid label reference 999, should cause type mismatch
      )
    )
  )
  "type mismatch"
)